000715 Dubos — So human an animal

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -1113,6 +1113,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Dubos, René</td>
+<td class='livre'><a href='livres/000715/index.html'>So Human an Animal</a> †</td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Goldman, Emma</td>
 <td class='livre'><a href='livres/000196/index.html'>Anarchism and other essays</a></td>
 </tr>
