--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -1104,7 +1104,7 @@
 
 <tr>
 <td class='auteur' valign='top'>Câmara, Hélder</td>
-<td class='livre'><a href='livres/000703/index.html'>Spiral of violance</a> †</td>
+<td class='livre'><a href='livres/000703/index.html'>Spiral of violence</a> †</td>
 </tr>
 
 <tr>
@@ -1174,17 +1174,17 @@
 
 <h3><a name="fidelite">Fidélité</a></h3>
 
-<p>Il me semble important de respecter scrupuleusement l’orthographe et la typographie originale. La principale raison est tout simplement le respect du texte original. De plus, je n’ai pas les compétences nécessaires pour produire une nouvelle édition crédible. Enfin, ce respect permet d’avoir une évaluation objective du travail de réimpression, qui malgré des relectures reste toujours imparfait. D’où l’emploi du terme <em>réimpression</em> plutôt qu’<em>édition</em>, et l’utilisation de fac-similés précis et accessible à tous.</p>
+<p>Il me semble important de respecter scrupuleusement l’orthographe et la typographie originale. La principale raison est tout simplement le respect du texte original. De plus, je n’ai pas les compétences nécessaires pour produire une nouvelle édition crédible. Enfin, ce respect permet d’avoir une évaluation objective du travail de réimpression, qui malgré des relectures reste toujours imparfait. D’où l’emploi du terme <em>réimpression</em> plutôt qu’<em>édition</em>, et l’utilisation de fac-similés précis et accessibles à tous.</p>
 
 <p>Cela dit, les éditions originales ont parfois des défauts. Cela va des fautes d'impression (par exemple quand une lettre a sauté dans la presse), aux fautes de composition (quand le typographe a pris la mauvaise lettre), aux fautes d'orthographe de l'auteur, aux choix idiosyncratiques des auteurs. Bien sûr, la limite entres toutes ces catégories n'est pas absolue, ou du moins, il y beaucoup de cas où nous ne pouvons pas déterminer la nature d’une erreur apparente (il faudrait demander à l'auteur). La ligne de conduite est la suivante : les fautes d’impression, quand elles peuvent être clairement identifiées en tant que telles, sont corrigées sans marquage ; les fautes de composition et d’orthographe, quand elles choquent à la lecture, sont corrigées avec marquage ; les orthographes d’époque ou idiosyncratiques ne sont pas corrigées ; la modernisation est proscrite (mais voir ci-dessous pour une exception).</p>
 
-<p>Ce respect n’empêche pas d’enrichir les fichiers source, tant que les enrichissements peuvent être distingués de ce qui est original. Par exemple, dans Montesquieu, la graphie « oi » qui est devenue « ai » en français moderne est marquée par les éléments &lt;OA/&gt; et &lt;oa/&gt;. Les epubs ÉFÉLÉ réalisent ces élements par « AI » et « ai », sans marque particulière, parce que cela permet un lecture plus fluide ; libre à chacun de produire des epubs différents.</p>
+<p>Ce respect n’empêche pas d’enrichir les fichiers source, tant que les enrichissements peuvent être distingués de ce qui est original. Par exemple, dans Montesquieu, la graphie « oi » qui est devenue « ai » en français moderne est marquée par les éléments &lt;OA/&gt; et &lt;oa/&gt;. Les epubs ÉFÉLÉ réalisent ces éléments par « AI » et « ai », sans marque particulière, parce que cela permet une lecture plus fluide ; libre à chacun de produire des epubs différents.</p>
 
 <h3><a name="fichier_source">Fichier source</a></h3>
 
 <p>Les epubs sont effectués à partir du <em>fichier source</em>, qui est simplement la mise sous forme électronique de l’édition papier retenue.</p>
 
-<p>Ce fichier source est en XML, dans un vocabulaire ad-hoc. La plupart des fichiers sources utilisent le vocabulaire BML (Book Markup Language), qui est en gros du HTML augmenté (meta-données, pagination de l’original, notes, séparateurs, poésie, corrections,...). Lorsque le texte a une structure relativement claire (par exemple, les <em>Lettres Persanes</em>, qui est fait de lettres, qui ont une entête, etc.), le vocabulaire est augmenté en conséquence, et la production d'epub passe par la transformation en BML.</p>
+<p>Ce fichier source est en XML, dans un vocabulaire ad hoc. La plupart des fichiers sources utilisent le vocabulaire BML (Book Markup Language), qui est en gros du HTML augmenté (méta-données, pagination de l’original, notes, séparateurs, poésie, corrections...). Lorsque le texte a une structure relativement claire (par exemple, les <em>Lettres Persanes</em>, qui est fait de lettres, qui ont un en-tête, etc.), le vocabulaire est augmenté en conséquence, et la production d'epub passe par la transformation en BML.</p>
 
 <p>Les fichiers sources sont maintenus sous <a href='https://github.com/eric-muller/livres-efele'>GitHub</a>.</p>
 
@@ -1200,7 +1200,7 @@
 
 <p>Parce que les fichiers source et les epubs sont améliorés au fur et à mesure que des erreurs sont trouvées, je recommande aux aggrégateurs de pointer sur http://efele.net/ebooks plutôt que de copier les fichiers.</p>
 
-<p>Je ne collecte aucune donnée relative aux téléchargements, même en agrégat anonyme. Vos lectures et ce que vous voulez en partager ne regarde que vous. Je ne peux malheureusement pas garantir ce que mon fournisseur d’hébergement fait ou ne fait pas.</p>
+<p>Je ne collecte aucune donnée relative aux téléchargements, même en agrégat anonyme. Vos lectures et ce que vous voulez en partager ne regardent que vous. Je ne peux malheureusement pas garantir ce que mon fournisseur d’hébergement fait ou ne fait pas.</p>
 
 </body>
 </html>
