Réparation des liens

--- a/livres.publies/rolland/jean_christophe/index.html
+++ b/livres.publies/rolland/jean_christophe/index.html
@@ -32,35 +32,35 @@
 
 <table border="0" cellpadding="2">
 <tr>
-<td class='livre'><a href='livres/000467/index.html'>Jean-Christophe — I : L’aube</a></td>
+<td class='livre'><a href='../000467/index.html'>Jean-Christophe — I : L’aube</a></td>
 </tr>
 
 <tr>
-<td class='livre'><a href='livres/000469/index.html'>Jean-Christophe — II : Le matin</a></td>
+<td class='livre'><a href='../000469/index.html'>Jean-Christophe — II : Le matin</a></td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000470/index.html'>Jean-Christophe — III : L’adolescent</a></td>
+<td class='livre'><a href='../000470/index.html'>Jean-Christophe — III : L’adolescent</a></td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000471/index.html'>Jean-Christophe — IV : La révolte</a></td>
+<td class='livre'><a href='../000471/index.html'>Jean-Christophe — IV : La révolte</a></td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000472/index.html'>Jean-Christophe à Paris — I : La foire sur la place</a></td>
+<td class='livre'><a href='../000472/index.html'>Jean-Christophe à Paris — I : La foire sur la place</a></td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000473/index.html'>Jean-Christophe à Paris — II : Antoinette</a></td>
+<td class='livre'><a href='../000473/index.html'>Jean-Christophe à Paris — II : Antoinette</a></td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000474/index.html'>Jean-Christophe à Paris — III : Dans la maison</a></td>
+<td class='livre'><a href='../000474/index.html'>Jean-Christophe à Paris — III : Dans la maison</a></td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000475/index.html'>Jean-Christophe, la fin du voyage — I : Les amies</a></td>
+<td class='livre'><a href='../000475/index.html'>Jean-Christophe, la fin du voyage — I : Les amies</a></td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000482/index.html'>Jean-Christophe, la fin du voyage — II : Le buisson ardent</a></td>
+<td class='livre'><a href='../000482/index.html'>Jean-Christophe, la fin du voyage — II : Le buisson ardent</a></td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000487/index.html'>Jean-Christophe, la fin du voyage — III : La nouvelle journée</a></td>
+<td class='livre'><a href='../000487/index.html'>Jean-Christophe, la fin du voyage — III : La nouvelle journée</a></td>
 </tr>
 </table>
 
