000716 Europe — Numéro spécial 1914-1934

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -371,6 +371,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign="top" rowspan='1'>Europe</td>
+<td class='livre'><a href='livres/000716/index.html'>Numéro special 1914-1934</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top">Farrère, Claude</td>
 <td class='livre'><a href='livres/000676/index.html'>Les civilisés</a></td>
 </tr>
