000717 Valéry — Regards sur le monde actuel (1945)

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -1046,6 +1046,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Valéry, Paul</td>
+<td class='livre'><a href='livres/000717/index.html'>Regards sur le monde actuel (1945)</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Varinot, Antonine</td>
 <td class='livre'><a href='livres/000626/index.html'>Un épisode de guerre tragi-comique</a></td>
 </tr>
