000718 Duhamel — Confession de minuit

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -340,6 +340,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Duhamel, Georges</td>
+<td class='livre'><a href='livres/000718/index.html'>Confession de minuit †</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Duprat, François</td>
 <td class='livre'><a href='livres/000380/index.html'>Histoire de l’Imprimerie impériale de France</a></td>
 </tr>
