000719 Duhamel — Deux hommes

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -340,8 +340,12 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Duhamel, Georges</td>
+<td class='auteur' valign='top' rowspan='2'>Duhamel, Georges</td>
 <td class='livre'><a href='livres/000718/index.html'>Confession de minuit †</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000719/index.html'>Deux hommes †</a></td>
 </tr>
 
 <tr>
