000720 Duhamel — Journal de Salavin

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -340,12 +340,16 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='2'>Duhamel, Georges</td>
+<td class='auteur' valign='top' rowspan='3'>Duhamel, Georges</td>
 <td class='livre'><a href='livres/000718/index.html'>Confession de minuit †</a></td>
 </tr>
 
 <tr>
 <td class='livre'><a href='livres/000719/index.html'>Deux hommes †</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000719/index.html'>Journal de Salavin †</a></td>
 </tr>
 
 <tr>
