000721 Arnould — Histoire populaire et parlementaire de la commune de Paris

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -114,6 +114,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Arnould, Arthur</td>
+<td class='livre'><a href="livres/000721/index.html">Histoire populaire et parlementaire de la commune de Paris</a></td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan='7' valign='top'>Bachelin, Henri</td>
 <td class='livre'><a href="livres/000297/index.html">Le bélier, la brebis et le mouton</a></td>
 </tr>
