--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -345,7 +345,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='3'>Duhamel, Georges</td>
+<td class='auteur' valign='top' rowspan='4'>Duhamel, Georges</td>
 <td class='livre'><a href='livres/000718/index.html'>Confession de minuit †</a></td>
 </tr>
 
@@ -354,7 +354,11 @@
 </tr>
 
 <tr>
-<td class='livre'><a href='livres/000719/index.html'>Journal de Salavin †</a></td>
+<td class='livre'><a href='livres/000720/index.html'>Journal de Salavin †</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000722/index.html'>Le Club des Lyonnais †</a></td>
 </tr>
 
 <tr>
